force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Log__c/leaseworks__Bulk_Invoice_Process_Request_Log__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Bulk Invoice Process Request Log</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Bulk Invoice Process Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Invoice Process Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>