force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Log__c/fields/leaseworks__Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the party to which invoice is sent</description>
    <inlineHelpText>Indicates the party to which invoice is sent</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bulk Invoice Process Request Logs</relationshipLabel>
    <relationshipName>Bulk_Invoice_Process_Request_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>