force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Log__c/fields/leaseworks__Parameters__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Parameters__c</fullName>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>