force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Log__c/fields/leaseworks__Retry_Counter__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Retry_Counter__c</fullName>
    <description>Retry Counter counts the number of times BulkInvoicingScheduler got scheduled to mark Process request log&#39;s Status as Success. After specific retry Process request log&#39;s Status is updated as &#39;Error&#39;.</description>
    <label>Retry Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>