force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Log__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>