force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Log__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>